# faustus

./: .gitignore  Cargo.toml  LICENSE  Makefile  Makefile.toml  README.md  build.rs  faust.code-workspace  justfile  license.template  ptags.toml  rustfmt.toml
architecture/: faustvstqt.hh  lv2qtgui.hh  minimal-jack.rs  minimal-portaudio.rs  minimal.rs  thread.hh
compiler/: dsp_factory.hh  garbageable.hh  global.cpp  global.hh  libcode.cpp  main.cpp
compiler/boxes/: boxcomplexity.cpp  boxcomplexity.hh  boxes.cpp  boxes.hh  boxtype.cpp  ppbox.cpp  ppbox.hh
compiler/documentator/: doc.cpp  doc.hh  doc_Text.cpp  doc_Text.hh  doc_autodoc.cpp  doc_autodoc.hh  doc_compile.cpp  doc_compile.hh  doc_lang.cpp  doc_lang.hh  doc_metadatas.cpp  doc_metadatas.hh  doc_notice.cpp  doc_notice.hh  doc_sharing.cpp  lateq.cpp  lateq.hh
compiler/draw/: drawschema.cpp  drawschema.hh  sigToGraph.cpp  sigToGraph.hh
compiler/errors/: errormsg.cpp  errormsg.hh  exception.hh  timing.cpp  timing.hh
compiler/evaluate/: environment.cpp  environment.hh  eval.cpp  eval.hh  loopDetector.cpp  loopDetector.hh
compiler/extended/: absprim.hh  acosprim.hh  asinprim.hh  atan2prim.hh  atanprim.hh  ceilprim.hh  cosprim.hh  exp10prim.hh  expprim.hh  floorprim.hh  fmodprim.hh  ftzprim.hh  log10prim.hh  logprim.hh  (+10 more)
libraries/: generateDoc
specification/: TAddress.cpp  TAddress.hh  TCompiler.hh  TIndex.hh  TLang.hh  TPrintable.hh  TSignal.cpp  TSignal.hh  TStatement.cpp  TStatement.hh  TSyntax.cpp  TSyntax.hh  TType.hh  TValue.hh  Text.cpp  Text.hh  faust-mr  faust-mr.cpp  faust2-mr.txt
src/: ffi.rs
(+313 files in other folders)
